--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
         <h1>Login</h1>
         <p>Sign in to continue</p>
         <form action="#" method="POST">
-            <label for="1email">Email</label>
+            <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
             
             <label for="password">Password</label>
