worked on home page
added a js button and made the home page a little nicer

--- a/Application/main.html
+++ b/Application/main.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="welcome-container">
-        <h1>Welcome to</h1>
-        <h2 class="pingpop-logo">PINGPOP</h2>
-        <p><a href="profile.html">Click Here to begin</a></p>
+    <div class="main-page">
+        <div class="main-container">
+            <h1>Welcome to</h1>
+            <h2 class="main-logo">PINGPOP</h2>
+            <button class="main-button" onclick="goToProfile()">Click Here to begin</button>
+        </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
