--- a/Application/profile.html
+++ b/Application/profile.html
@@ -17,15 +17,15 @@
     
         <nav class="sidebar">
             <ul>
-                <li><a href="/profile.html"><img src="icons/user.png" alt="Profile"></a></li>
-                <li><a href="/messages.html"><img src="icons/messages.png" alt="Messages"></a></li>
-                <li><a href="/friends.html"><img src="icons/friends.png" alt="Find Friends"></a></li>
-                <li><a href="/encrypt.html"><img src="icons/encryption.png" alt="Encryption"></a></li>
+                <li><a href="profile.html"><img src="icons/user.png" alt="Profile"></a></li>
+                <li><a href="messages.html"><img src="icons/messages.png" alt="Messages"></a></li>
+                <li><a href="friends.html"><img src="icons/friends.png" alt="Find Friends"></a></li>
+                <li><a href="encrypt.html"><img src="icons/encryption.png" alt="Encryption"></a></li>
             </ul>
         </nav>
         <main>
             <div class="profile-section">
-                <img src="/icons/user.png" alt="Profile Icon" class="profile-icon">
+                <img src="icons/user.png" alt="Profile Icon" class="profile-icon">
                 <a href="#" class="change-icon">Change Profile Icon</a>
             </div>
             <div class="profile-details">
