--- a/Server/Public/register.html
+++ b/Server/Public/register.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
+<html lang="en">
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
-    <script src="app.js" type="module"></script> 
+    <script type="module">
+    </script>
 </head>
 <body>
     <div class="register-container">
