--- a/Server/Public/register.html
+++ b/Server/Public/register.html
@@ -5,8 +5,6 @@
     <title>Register</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
-    <script type="module">
-    </script>
 </head>
 <body>
     <div class="register-container">
@@ -29,5 +27,8 @@
             <button type="submit">Sign Up</button>
         </form>
     </div>
+    <script src="supabaseClient.js"></script>
+    <script src="register.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
