style changes and terms of agreement

--- a/Public/login.html
+++ b/Public/login.html
@@ -21,7 +21,9 @@
 
                 <button type="submit">Login</button>
             </form>
+            <p class="link"><a href="register.html">New User? Register Here!</a></p>
             <p class="link"><a href="forgotpwd.html">Forgot Password?</a></p>
+
         </div>
     </div>
 
