fix log in and register

--- a/Public/register.html
+++ b/Public/register.html
@@ -31,17 +31,8 @@
     </div>
   </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
-<script>
-  const client = supabase.createClient(
-    'https://wkywenoxjvgjxaociect.supabase.co',
-    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndreXdlbm94anZnanhhb2NpZWN0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQzOTcxMjMsImV4cCI6MjA1OTk3MzEyM30.t_4qJwwp9MClViTGjmc4WR2yfBCvRjKnoTVclHVvhtY'
-    );
-  window.supabase = client; // Attach it to window for register.js to access
-</script>
-
-<script src="register.js"></script>
+  <script type="module" src="register.js"></script>
 
 </body>
 </html>
