--- a/Public/encrypt.html
+++ b/Public/encrypt.html
@@ -10,16 +10,16 @@
     <header class="header">
         <span class="logo">PINGPOP</span>
         <a href="settings.html" class="settings-btn">
-            <img src="icons/settings.png" alt="Settings">
+            <img src="/icons/settings.png" alt="Settings">
         </a>
     </header>
 
     <aside class="sidebar">
         <ul>
-            <li><a href="profile.html"><img src="icons/user.png" alt="Profile"></a></li>
-            <li><a href="messages.html"><img src="icons/messages.png" alt="Messages"></a></li>
-            <li><a href="friends.html"><img src="icons/friends.png" alt="Add Friends"></a></li>
-            <li><a href="encrypt.html"><img src="icons/encryption.png" alt="Encryptions"></a></li>
+            <li><a href="profile.html"><img src="/icons/user.png" alt="Profile"></a></li>
+            <li><a href="messages.html"><img src="/icons/messages.png" alt="Messages"></a></li>
+            <li><a href="friends.html"><img src="/icons/friends.png" alt="Add Friends"></a></li>
+            <li><a href="encrypt.html"><img src="/icons/encryption.png" alt="Encryptions"></a></li>
         </ul>
     </aside>
 
