--- a/Public/privacy.html
+++ b/Public/privacy.html
@@ -10,7 +10,7 @@
   <header class="header">
     <span class="logo">PINGPOP</span>
     <a href="settings.html" class="settings-btn">
-      <img src="icons/settings.png" alt="Settings">
+      <img src="/icons/settings.png" alt="Settings">
     </a>
   </header>
 
@@ -19,7 +19,7 @@
       <a href="terms.html" class="back-button">← Back to Terms</a>
     </div>
 
-    <img src="Icons/PingPop_Logo.png" alt="PingPop Logo" class="terms-logo" />
+    <img src="/Icons/PingPop_Logo.png" alt="PingPop Logo" class="terms-logo" />
     <h1>Privacy Policy</h1>
     <p class="intro">
       At PingPop, your privacy is extremely important to us. This Privacy Policy outlines the types of data we collect and how we use, protect, and share that information.
