--- a/Public/login.html
+++ b/Public/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="auth-wrapper">
         <div class="auth-container">
-            <img src="/Icons/PingPop_Logo.png" alt="PingPop Logo" class="logo-img" />
+            <img src="Icons/PingPop_Logo.png" alt="PingPop Logo" class="logo-img" />
             <h1>Welcome Back</h1>
             <p>Sign in to continue</p>
             <form id="loginForm">
