--- a/Public/messages.html
+++ b/Public/messages.html
@@ -11,15 +11,15 @@
 <header class="header">
     <span class="logo">PINGPOP</span>
     <a href="settings.html" class="settings-btn">
-        <img src="/icons/settings.png" alt="Settings">
+        <img src="Icons/settings.png" alt="Settings">
     </a>
 </header>
 <body>
     <div class="messages-container">
         <nav class="sidebar">
             <ul>
-                <li><a href="profile.html"><img src="/icons/user.png" alt="Profile"></a></li>
-                <li><a href="messages.html"><img src="/icons/messages.png" alt="Messages"></a></li>
+                <li><a href="profile.html"><img src="Icons/user.png" alt="Profile"></a></li>
+                <li><a href="messages.html"><img src="Icons/messages.png" alt="Messages"></a></li>
                
             </ul>
         </nav>
