--- a/Public/register.html
+++ b/Public/register.html
@@ -9,7 +9,7 @@
 <body>
   <div class="auth-wrapper">
     <div class="auth-container">
-      <img src="/Icons/PingPop_Logo.png" alt="PINGPOP Logo" class="logo-img" />
+      <img src="Icons/PingPop_Logo.png" alt="PINGPOP Logo" class="logo-img" />
       <h1>Create New Account</h1>
       <p>Already Registered? <a href="login.html">Login</a></p>
 
