--- a/Public/friends.html
+++ b/Public/friends.html
@@ -10,16 +10,16 @@
     <header class="header">
         <span class="logo">PINGPOP</span>
         <a href="settings.html" class="settings-btn">
-            <img src="/icons/settings.png" alt="Settings">
+            <img src="Icons/settings.png" alt="Settings">
         </a>
     </header>
 
     <aside class="sidebar">
         <ul>
-            <li><a href="profile.html"><img src="/icons/user.png" alt="Profile"></a></li>
-            <li><a href="messages.html"><img src="/icons/messages.png" alt="Messages"></a></li>
-            <li><a href="friends.html"><img src="/icons/friends.png" alt="Add Friends"></a></li>
-            <li><a href="encrypt.html"><img src="/icons/encryption.png" alt="Encryptions"></a></li>
+            <li><a href="profile.html"><img src="Icons/user.png" alt="Profile"></a></li>
+            <li><a href="messages.html"><img src="Icons/messages.png" alt="Messages"></a></li>
+            <li><a href="friends.html"><img src="Icons/friends.png" alt="Add Friends"></a></li>
+            <li><a href="encrypt.html"><img src="Icons/encryption.png" alt="Encryptions"></a></li>
         </ul>
     </aside>
 
@@ -31,7 +31,7 @@
             </div>
             <ul class="friend-items">
                 <li>
-                    <img src="/icons/user.png" alt="User 1">
+                    <img src="Icons/user.png" alt="User 1">
                     <span>Friend Name</span>
                 </li>
             </ul>
